    - Add --task-desc switch. Closes: #259664
    - Re-organised the documentation.
    - Modularised how the list of packages in a task is determined.
    - Play with server relevance values a bit to order web server and print
      server to the top.
    - Use aptitude's new --visual-preview option to allow selection and then
      fine-tuning of tasks.
  * Per Olofsson
    - Added openoffice.org-help-sv and gimp-help-sv to swedish-desktop.
      Closes: #259832.
  * Changwoo Ryu
    - Moved X applications/fonts to Korean-desktop from Korean.
  * Rene Engelhard
    - Added myspell-ru to russian task
    - Added openoffice.org-l10n-he to hebrew-desktop task
    - Added openoffice.org-l10n-{nb,nn} to norwegian-desktop task
  * Recai Oktas
    - Added kde-i18n-tr, koffice-i18n-tr and openoffice.org-l10n-tr
      to the turkish-desktop task
  * Translations
    - Kęstutis Biliūnas
      - Updated Lithuanian debconf and tasks translations.
    - Claus Hindsgaul
      - Updated Danish translation of tasks and program translation.
    - Eugeniy Meshcheryakov
      - Updated Ukrainian tasks and program translation.
    - Kruno
      - Initial Croatian tasks, debconf and program translation hr.po
    - Dennis Stampfer
      - Updated German program and tasks. Initial debconf translation.
  * Christian Perrier
    - Corrected Japanese desktop task description. Closes: #260233

 -- Rene Engelhard <rene@debian.org>  Tue, 20 Jul 2004 23:21:10 +0200

tasksel (2.06) unstable; urgency=medium

  * Joey Hess
    - Switch mozilla to mozilla-browser.
    - Run aptitude --without-recommends when noninteractively installing
      tasks, since tasks should be usable w/o recommends and recommends may
      pull in unintended packages.
  * Kenshi Muto
    - Modified Japanese and Japanese-desktop (moved X applications to
      Japanese-desktop)
  * Translations
    - André Luís Lopes
      - Updated Brazilian Portuguese tasks translation.
