@@ -6,6 +6,8 @@ tasksel - a user interface for installing tasks
 
 tasksel install <task>
 
+tasksel remove <task>
+
 tasksel [options]
 
 =head1 DESCRIPTION
