@@ -11,6 +11,7 @@ tasksel (2.07) UNRELEASED; urgency=low
       server to the top.
     - Use aptitude's new --visual-preview option to allow selection and then
       fine-tuning of tasks.
+    - Add tasksel remove command. Closes: #259664
   * Per Olofsson
     - Added openoffice.org-help-sv and gimp-help-sv to swedish-desktop.
       Closes: #259832.
